pdf gen done and tested
